Fixed newsletter banner

--- a/blocks/_blog-post-card.liquid
+++ b/blocks/_blog-post-card.liquid
@@ -493,10 +493,12 @@
       font-size: 0.9rem;
     }
 
-    /* Featured article mobile - position hover bar at bottom like a caption */
+    /* Featured article mobile - center the hover box */
     .blog-post-item.featured-article .blog-post-card__hover {
-      top: auto;
-      bottom: 2rem;
+      top: 50%;
+      bottom: auto;
+      left: 50%;
+      transform: translate(-50%, -50%);
       width: 90%;
     }
     
